# Multiagent-RL

./: .gitignore  Doxyfile  README.md  agents.py  communication.py  controller.py  core.py  example_client.py  example_predator_prey.py  example_server.py  example_windy_world.py  experiments.txt  learn.py  learning.py  messages.py  pacman_mas.py  pacmantest  plot.py  run_experiments.sh  simulation.py  simulator.py  state.py  test  test_learn.py
pacman/: test  (+18 more)
references/pacman-behavior/bayesian_q_5_behaviors/: CMakeLists.txt  package.xml
references/pacman-behavior/bayesian_q_5_behaviors/include/bayesian_q_5_behaviors/: bayesian_5_behaviors_agent.h  bayesian_game_state_5_behaviors.h  bayesian_q_learning_5_behaviors.h
references/pacman-behavior/bayesian_q_5_behaviors/src/: bayesian_q_controller_5_behaviors.cpp
references/pacman-behavior/bayesian_q_5_behaviors/src/bayesian_q_5_behaviors/: bayesian_5_behaviors_agent.cpp  bayesian_game_state_5_behaviors.cpp  bayesian_q_learning_5_behaviors.cpp
references/pacman-behavior/bayesian_q_learning/: CMakeLists.txt  package.xml
references/pacman-behavior/bayesian_q_learning/include/bayesian_q_learning/: bayesian_behavior_agent.h  bayesian_game_state.h  bayesian_q_learning.h
references/pacman-behavior/bayesian_q_learning/src/: bayesian_q_controller.cpp  test.cpp
references/pacman-behavior/bayesian_q_learning/src/bayesian_q_learning/: bayesian_behavior_agent.cpp  bayesian_game_state.cpp  bayesian_q_learning.cpp
references/pacman-behavior/deterministic_q_learning/: CMakeLists.txt  package.xml
references/pacman-behavior/deterministic_q_learning/include/deterministic_q_learning/: deterministic_behavior_agent.h  deterministic_game_state.h  deterministic_q_learning.h
references/pacman-behavior/deterministic_q_learning/src/: deterministic_q_controller.cpp
references/pacman-behavior/deterministic_q_learning/src/deterministic_q_learning/: deterministic_behavior_agent.cpp  deterministic_game_state.cpp  deterministic_q_learning.cpp
references/pacman-behavior/pacman_abstract_classes/: CMakeLists.txt  package.xml
references/pacman-behavior/pacman_abstract_classes/include/pacman_abstract_classes/: agent.h  ghost_agent.h  pacman_agent.h  util_functions.h
references/pacman-behavior/pacman_abstract_classes/src/pacman_abstract_classes/: agent.cpp  ghost_agent.cpp  pacman_agent.cpp  util_functions.cpp
references/pacman-behavior/pacman_controller/: CMakeLists.txt  package.xml
references/pacman-behavior/pacman_controller/include/pacman_controller/: game_info.h  pacman_behaviors.h
references/pacman-behavior/pacman_controller/src/: agent.cpp  behavior_keyboard_agent.cpp  behavior_keyboard_agent.h  behavior_pacman_controller.cpp  game_info.cpp  ghost_agent.cpp  ghost_agent.h  keyboardCppAgent.cpp  keyboard_agent.cpp  keyboard_agent.h  keyboard_controller.py  minmax_agent.cpp  multiAgents.py  new_keyboard_agent.cpp  pacman_agent.cpp  pacman_agent.h  pacman_behaviors.cpp  pacman_controller.cpp  util_functions.cpp  util_functions.h  visible_ghost_agent.cpp  visible_ghost_agent.h
references/pacman-behavior/pacman_game/: CMakeLists.txt  package.xml
references/pacman-behavior/pacman_game/cfg/docs/: game.html  ghostAgents.html  graphicsDisplay.html  graphicsUtils.html  multiAgents.html  pacman.html  util.html
references/pacman-behavior/pacman_game/src/: codename.txt  commands.txt  game.py  ghostAgents.py  graphicsDisplay.py  graphicsUtils.py  layout.py  multiAgents.py  multiagentProject.html  pacman.py  pacmanAgents.py  pacman_ros.py  partners.txt  projects.css  rosAgents.py  textDisplay.py  util.py
references/pacman-behavior/pacman_interface/: CMakeLists.txt  package.xml
references/pacman-behavior/pacman_interface/cfg/docs/: keyboardAgents.html  layout.html  pacmanAgents.html  textDisplay.html
references/pacman-behavior/pacman_interface/msg/: MapLayout.msg  PacmanAction.msg
references/pacman-behavior/pacman_interface/src/: game.py  graphicsUtils.py  keyboardAgents.py  layout.py  mypy.py  pacman.py  pacman_ros.py  pleasegrade.txt  rosAgents.py
references/pacman-behavior/pacman_interface/srv/: PacmanGetAction.srv  PacmanMapInfo.srv
references/pacman-behavior/pacman_msgs/: CMakeLists.txt  package.xml
references/pacman-behavior/pacman_msgs/msg/: AgentAction.msg  AgentPose.msg
references/pacman-behavior/pacman_msgs/srv/: AgentPoseService.srv  EndGame.srv  PacmanGetAction.srv  PacmanInitializationInfo.srv  RewardService.srv  StartGame.srv
references/pacman-behavior/particle_filter_pacman/: CMakeLists.txt  package.xml
references/pacman-behavior/particle_filter_pacman/include/particle_filter_pacman/: behavior_keyboard_agent.h  game_particle.h  learning_agent.h  particle_filter.h  q_learning.h  q_learning_simple.h  util_constants.h  util_functions.h
references/pacman-behavior/particle_filter_pacman/src/: kb_behavior_controller.cpp  learning_controller.cpp  particle_pacman_controller.cpp
references/pacman-behavior/particle_filter_pacman/src/particle_filter_pacman/: behavior_keyboard_agent.cpp  game_particle.cpp  learning_agent.cpp  particle_filter.cpp  q_learning.cpp  q_learning_simple.cpp  util_constants.cpp  util_functions.cpp
references/pacman-behavior/q_learning_pacman/: CMakeLists.txt  package.xml
references/pacman-behavior/q_learning_pacman/include/q_learning_pacman/: bayesian_game_state.h  behavior_agent.h  game_state.h  q_learning.h
references/pacman-behavior/q_learning_pacman/src/: q_learning_controller.cpp
references/pacman-behavior/q_learning_pacman/src/q_learning_pacman/: bayesian_game_state.cpp  behavior_agent.cpp  game_state.cpp  q_learning.cpp
references/pacman-behavior/simple_q_learning/: CMakeLists.txt  package.xml
references/pacman-behavior/simple_q_learning/include/simple_q_learning/: simple_behavior_agent.h  simple_game_state.h  (+1 more)
references/pacman-behavior/simple_q_learning/src/: simple_q_controller.cpp
references/pacman-behavior/teste_pacman_map/: CMakeLists.txt  package.xml
references/pacman-behavior/teste_pacman_map/src/: estimation_step.cpp  find_distances_in_map.cpp  new_game_info.cpp
(+146 files in other folders)
