<?xml version="1.0"?>
<package>
  <name>pacman_msgs</name>
  <version>0.0.0</version>
  <description>The pacman_msgs package</description>

  <maintainer email="tiago@todo.todo">tiago</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/pacman_msgs</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
  </export>
</package>