<?xml version="1.0"?>
<package>
  <name>q_learning_pacman</name>
  <version>0.0.0</version>
  <description>The q_learning_pacman package</description>

  <maintainer email="tiago@todo.todo">tiago</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/q_learning_pacman</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pacman_abstract_classes</build_depend>
  <build_depend>pacman_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pacman_abstract_classes</run_depend>
  <run_depend>pacman_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
